fixed the z-index for the logout link

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -110,7 +110,7 @@ p {
   height: 50px;
   line-height: 50px;
   padding-left: 20px;
-  z-index: 111111;
+  z-index: 1;
 }
 
 /* submenu (content|pages|files|url) */
